--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="listPaciente" id="listPaciente">
             <div class="contenedor-paciente">
                 <div class="agregar-paciente">
-                    <button class="nuevo">Agregar Nuevo Paciente</button>
+                    <button class="nuevo">Nuevo Paciente</button>
                 </div>
                 <div class="listado-paciente" id="listado-paciente"> 
                 </div>
