errores corregido de listar paciente

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="panelMenu">
             <label for="btn-chkMenu" class="far fa-times-circle equis"></label>
             <nav>
-                <a href="#" id="btn-listarPacientes">Pacientes</a>
+                <a href="index.html" id="btn-listarPacientes">Pacientes</a>
                 <a href="#" id="btn-listarPacientes">Lorem</a>
                 <a href="#" id="btn-listarPacientes">Lorem</a> 
                 <a href="#" id="btn-listarPacientes">Lorem</a>
@@ -49,10 +49,10 @@
 
     <section class="main">
         <section class="listPaciente" id="listPaciente">
-            <div class="contenedor-paciente">
-                <div class="agregar-paciente">
-                    <button class="nuevo">Nuevo Paciente</button>
-                </div>
+            <div class="agregar-paciente">
+                <button class="nuevo">Nuevo Paciente</button>
+            </div>
+            <div class="contenedor-paciente">                
                 <div class="listado-paciente" id="listado-paciente"> 
                 </div>
             </div>
